@startuml

'skinparam linetype ortho
left to right direction

entity "User" as user {
first_name: string
last_name: string
middle_name: string
sex: Sex
login: string
password: string
about_me: string
score: int
level: int
}

entity "CleanDay" as cl_day {
name: string
begin_date: datetime
end_date: datetime
organization: string
area: int
status: CleanDayStatus
tags: CleanDayTag[]
recommended_count: int
description: string
}

entity "Comment" as comm {
text: string
date: datetime
}

entity "Log" as log {
date: datetime
type: string
description: string
}

entity "Requirement" as rq {
name: string
}

entity "City" as city {
name: string
}

entity "Participation" as pr {
type: ParticipationType
real_presence: bool
stat: int
}

entity "Location" as loc {
address: string
instructions: string
}

entity "Image" as img {
description: string
photo: File
}

cl_day --> comm
note on link
<b>HAS_COMMENT</b>
end note

comm <--> pr
note on link
<b>AUTHORED</b>
end note

cl_day --> rq
note on link
<b>HAS_REQUIREMENT</b>
end note

cl_day --> city
note on link
<b>TAKES_PLACE_IN</b>
end note

user -> city
note on link
<b>LIVES_IN</b>
end note

user -> pr
note on link
<b>HAS_PARTICIPATION</b>
end note

pr --> cl_day
note on link
<b>PARTICIPATION_IN</b>
end note

cl_day --> loc
note on link
<b>IN_LOCATION</b>
end note

pr -> rq
note on link
<b>FULFILLS_REQUIREMENT</b>
end note

loc --> img
note on link
<b>LOCATION_IMAGE</b>
end note

cl_day --> img
note on link
<b>CLEANDAY_IMAGE</b>
end note

user --> img
note on link
<b>USER_AVATAR</b>
end note

@enduml
